# scope

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml  README.md  coffee_test_output.json
backend/src/: main.rs
backend/src/core/: mod.rs  ocgraphconf_model_case_conformance.rs  ocpn_conversion.rs
backend/src/core/case_notion/: advanced.rs  connected_component.rs  generic.rs  log_graph.rs  log_graphs.rs  main.rs  main_richard.rs  measures.rs  mod.rs  traditional.rs  utils.rs
backend/src/core/clustering/: agglomerative.rs  embedding.rs  k_medoids.rs  mod.rs
backend/src/core/conformance/: object_centric_language_abstraction_struct.rs
backend/src/core/df2_miner/: build_relations_fns.rs  convert_to_json_tree.rs  divergence_free_dfg.rs  interaction_patterns.rs  mod.rs  ocpt_generator.rs  start_cuts.rs  start_cuts_opti.rs
backend/src/core/event_object_frequencies/: histogram_builder.rs  histogram_filtering.rs  mod.rs
backend/src/handlers/: abstractions.rs  case_notion.rs  clustering.rs  collection_ocels.rs  conformance.rs  conformance_ocgraphconf.rs  df2.rs  event_object_frequencies.rs  export.rs  extended_ocpt.rs  log_graphs.rs  mod.rs  ocel.rs  ocim.rs  ocpn.rs  ocpt.rs  resource_miner.rs
backend/src/models/: abstraction.rs  case_notion.rs  clustering.rs  dfg.rs  mod.rs  ocel.rs  ocel_collection.rs  ocel_sid_df2_miner.rs  ocgraphconf_case_compare.rs  ocgraphconf_model_case_conformance.rs  ocpn.rs  ocpt.rs  resource_miner.rs
backend/src/routes/: mod.rs
backend/src/traits/: import_export.rs  mod.rs
backend/tmp/: example_log.json
(+245 files in other folders)
