[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["http2", "macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["multipart"] }
bytes = "1.10.1"
chrono = "0.4.41"
cors = "0.1.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
itertools = "0.14.0"
log = "0.4.27"
multipart = "0.18.0"
nalgebra = "0.34.1"
ordered-float = "5.0.0"
petgraph = "0.8.3"
process_mining = { git = "https://github.com/BPM-Research-Group/rust4pm_BPM.git", package = "process_mining" }
ocgraphconf_process_mining = { git = "https://github.com/BPM-Research-Group/ocgraphconf_BPM.git", package = "process_mining" }
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
simplelog = "0.12.2"
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version ="0.6.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = "1.17.0"


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

